--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -52,6 +52,16 @@
         </a>
         {% endif %}
 
+	{% if site.mastodon %}
+	<a href="{{site.mastodon}}" rel="me" target="_blank">
+	  <button
+	    class="bg-white text-blueGray-800 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"
+	    type="button">
+	    <i class="fab fa-mastodon"></i>
+	  </button>
+	</a>
+	{% endif %}
+
         {% if site.medium %}
         <a href="{{site.medium}}" target="_blank">
           <button
